# matio

./: .travis.yml  CMakeLists.txt  README  README.md
src/: Makefile  matioConfig.h
